--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,64 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:03:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:03:19</td>   <td>17326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.titletest()[pri:49, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">titletest</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:03:20</td>   <td>17578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:03:21</td>   <td>19141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:03:38</td>   <td>35903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.AboutusTest()[pri:50, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">AboutusTest</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:03:57</td>   <td>54904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:03:58</td>   <td>55674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:04:12</td>   <td>70096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.Subjects()[pri:51, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">Subjects</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:04:28</td>   <td>85850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:04:29</td>   <td>86627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:04:43</td>   <td>100789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.moremaths()[pri:52, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">moremaths</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:04:45</td>   <td>102762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:04:46</td>   <td>103526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:01</td>   <td>119033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.moreenglish()[pri:53, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">moreenglish</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:03</td>   <td>121196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:04</td>   <td>121982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:18</td>   <td>135887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.morefrench()[pri:54, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">morefrench</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:20</td>   <td>137723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:21</td>   <td>139430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:37</td>   <td>154507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.tutor(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:55, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">tutor</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:38</td>   <td>155824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:39</td>   <td>156609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:55</td>   <td>172943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.tutor(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:55, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">tutor</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:57</td>   <td>174495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:05:57</td>   <td>175281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:06:12</td>   <td>190170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.tutor(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:55, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">tutor</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:06:13</td>   <td>191160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:06:14</td>   <td>191941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:06:27</td>   <td>205362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.tutor(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:55, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">tutor</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/05 12:06:28</td>   <td>206225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.teardown()[pri:0, instance:technoTutorsQaTests.HomePageTest@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 16:05:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 16:05:42</td>   <td>22779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.titlecheck()[pri:49, instance:technoTutorsQaTests.AboutUsTest@7d70d1b1]">titlecheck</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 16:05:45</td>   <td>25413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
 </table>
