--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-789530351\testng-customsuite.xml</span>
+                    <span>C:\Users\Vijay\AppData\Local\Temp\testng-eclipse--349235195\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,26 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="contactus(sathish, kajal123, 2.0, 2.0)">contactus(sathish, kajal123, 2.0, 2.0)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="contactus(karan, jay, 8.0, 4.0)">contactus(karan, jay, 8.0, 4.0)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="contactus(harish, janu, 7.0, 3.0)">contactus(harish, janu, 7.0, 3.0)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="contactus(mehul, vijay123, 1.0, 1.0)">contactus(mehul, vijay123, 1.0, 1.0)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="titlecheck">titlecheck</a> <!-- method navigator-link -->
@@ -125,6 +145,38 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="contactus(sathish, kajal123, 2.0, 2.0)">
+                  </a> <!-- contactus(sathish, kajal123, 2.0, 2.0) -->
+                  <span class="method-name">contactus</span>
+                  <span class="parameters">(sathish, kajal123, 2.0, 2.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="contactus(karan, jay, 8.0, 4.0)">
+                  </a> <!-- contactus(karan, jay, 8.0, 4.0) -->
+                  <span class="method-name">contactus</span>
+                  <span class="parameters">(karan, jay, 8.0, 4.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="contactus(harish, janu, 7.0, 3.0)">
+                  </a> <!-- contactus(harish, janu, 7.0, 3.0) -->
+                  <span class="method-name">contactus</span>
+                  <span class="parameters">(harish, janu, 7.0, 3.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="contactus(mehul, vijay123, 1.0, 1.0)">
+                  </a> <!-- contactus(mehul, vijay123, 1.0, 1.0) -->
+                  <span class="method-name">contactus</span>
+                  <span class="parameters">(mehul, vijay123, 1.0, 1.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="titlecheck">
                   </a> <!-- titlecheck -->
                   <span class="method-name">titlecheck</span>
@@ -135,7 +187,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-789530351\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Vijay\AppData\Local\Temp\testng-eclipse--349235195\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -184,16 +236,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'titlecheck')
 data.setCell(0, 2, 'technoTutorsQaTests.AboutUsTest')
-data.setCell(0, 3, 2617);
+data.setCell(0, 3, 1619);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'contactus')
+data.setCell(1, 2, 'technoTutorsQaTests.AboutUsTest')
+data.setCell(1, 3, 1160);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'contactus')
+data.setCell(2, 2, 'technoTutorsQaTests.AboutUsTest')
+data.setCell(2, 3, 1143);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'contactus')
+data.setCell(3, 2, 'technoTutorsQaTests.AboutUsTest')
+data.setCell(3, 3, 1113);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'contactus')
+data.setCell(4, 2, 'technoTutorsQaTests.AboutUsTest')
+data.setCell(4, 3, 1038);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -226,11 +294,59 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">titlecheck</span>
-                <span class="method-start">22782 ms</span>
+                <span class="method-start">22235 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">25413 ms</span>
+                <span class="method-start">23862 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">25604 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">contactus(mehul, vijay123, 1.0, 1.0)</span>
+                <span class="method-start">45981 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">47023 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">47778 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">contactus(sathish, kajal123, 2.0, 2.0)</span>
+                <span class="method-start">63650 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">64768 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">65767 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">contactus(harish, janu, 7.0, 3.0)</span>
+                <span class="method-start">82039 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">83185 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">83966 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">contactus(karan, jay, 8.0, 4.0)</span>
+                <span class="method-start">101598 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">102761 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
