--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/15 16:05:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 16:05:45</td>   <td>25413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 16:05:42</td>   <td>22779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.titlecheck()[pri:49, instance:technoTutorsQaTests.AboutUsTest@7d70d1b1]">titlecheck</td> 
-  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:54:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">contactus</td> 
+  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:55:13</td>   <td>17669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">contactus</td> 
+  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:55:31</td>   <td>36058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">contactus</td> 
+  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:55:51</td>   <td>55617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">contactus</td> 
+  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:54:09</td>   <td>-45978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:54:35</td>   <td>-20377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:54:57</td>   <td>1797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:55:15</td>   <td>19787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:55:33</td>   <td>37985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:54:33</td>   <td>-22119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:54:56</td>   <td>1043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:55:14</td>   <td>18787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:55:33</td>   <td>37204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:55:52</td>   <td>56780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/15 19:54:32</td>   <td>-23746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.titlecheck()[pri:49, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">titlecheck</td> 
+  <td>main@415186196</td>   <td></td> </tr>
 </table>
