--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Vijay\AppData\Local\Temp\testng-eclipse--349235195\testng-customsuite.xml</span>
+                    <span>C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-747276082\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,27 +102,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="contactus(sathish, kajal123, 2.0, 2.0)">contactus(sathish, kajal123, 2.0, 2.0)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="contactus(sathish, kajal123, 2.0, 2.0)">contactus(sathish, kajal123, 2.0, 2.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="contactus(karan, jay, 8.0, 4.0)">contactus(karan, jay, 8.0, 4.0)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="contactus(karan, jay, 8.0, 4.0)">contactus(karan, jay, 8.0, 4.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="contactus(harish, janu, 7.0, 3.0)">contactus(harish, janu, 7.0, 3.0)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="contactus(harish, janu, 7.0, 3.0)">contactus(harish, janu, 7.0, 3.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="contactus(mehul, vijay123, 1.0, 1.0)">contactus(mehul, vijay123, 1.0, 1.0)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="contactus(mehul, vijay123, 1.0, 1.0)">contactus(mehul, vijay123, 1.0, 1.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.AboutUsTest" hash-for-method="titlecheck">titlecheck</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="titlecheck">titlecheck</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -140,7 +140,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">technoTutorsQaTests.AboutUsTest</span>
+              <span class="class-name">technoTutorsQaTests.FacilityTestClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -187,7 +187,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Vijay\AppData\Local\Temp\testng-eclipse--349235195\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-747276082\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,7 +196,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;technoTutorsQaTests.AboutUsTest&quot;/&gt;
+      &lt;class name=&quot;technoTutorsQaTests.FacilityTestClass&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -239,29 +239,29 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'titlecheck')
-data.setCell(0, 2, 'technoTutorsQaTests.AboutUsTest')
-data.setCell(0, 3, 1619);
+data.setCell(0, 2, 'technoTutorsQaTests.FacilityTestClass')
+data.setCell(0, 3, 1565);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'contactus')
-data.setCell(1, 2, 'technoTutorsQaTests.AboutUsTest')
-data.setCell(1, 3, 1160);
+data.setCell(1, 2, 'technoTutorsQaTests.FacilityTestClass')
+data.setCell(1, 3, 1105);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'contactus')
-data.setCell(2, 2, 'technoTutorsQaTests.AboutUsTest')
-data.setCell(2, 3, 1143);
+data.setCell(2, 2, 'technoTutorsQaTests.FacilityTestClass')
+data.setCell(2, 3, 1062);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'contactus')
-data.setCell(3, 2, 'technoTutorsQaTests.AboutUsTest')
-data.setCell(3, 3, 1113);
+data.setCell(3, 2, 'technoTutorsQaTests.FacilityTestClass')
+data.setCell(3, 3, 1037);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'contactus')
-data.setCell(4, 2, 'technoTutorsQaTests.AboutUsTest')
-data.setCell(4, 3, 1038);
+data.setCell(4, 2, 'technoTutorsQaTests.FacilityTestClass')
+data.setCell(4, 3, 982);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -287,66 +287,66 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">technoTutorsQaTests.AboutUsTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">technoTutorsQaTests.FacilityTestClass</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">titlecheck</span>
-                <span class="method-start">22235 ms</span>
+                <span class="method-start">23779 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">23862 ms</span>
+                <span class="method-start">25350 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">25604 ms</span>
+                <span class="method-start">27305 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">contactus(mehul, vijay123, 1.0, 1.0)</span>
-                <span class="method-start">45981 ms</span>
+                <span class="method-start">42697 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">47023 ms</span>
+                <span class="method-start">43741 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">47778 ms</span>
+                <span class="method-start">44496 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">contactus(sathish, kajal123, 2.0, 2.0)</span>
-                <span class="method-start">63650 ms</span>
+                <span class="method-start">62241 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">64768 ms</span>
+                <span class="method-start">63228 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">65767 ms</span>
+                <span class="method-start">63998 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">contactus(harish, janu, 7.0, 3.0)</span>
-                <span class="method-start">82039 ms</span>
+                <span class="method-start">81621 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">83185 ms</span>
+                <span class="method-start">82685 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">83966 ms</span>
+                <span class="method-start">83842 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">contactus(karan, jay, 8.0, 4.0)</span>
-                <span class="method-start">101598 ms</span>
+                <span class="method-start">101590 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">102761 ms</span>
+                <span class="method-start">102697 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
