--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:54:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:07:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:54:32</td>   <td>22232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.titlecheck()[pri:49, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">titlecheck</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:07:58</td>   <td>23776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.titlecheck()[pri:49, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">titlecheck</td> 
   <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:54:33</td>   <td>23859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:07:59</td>   <td>25347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:54:35</td>   <td>25601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:01</td>   <td>27302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:54:55</td>   <td>45978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">contactus</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:17</td>   <td>42694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">contactus</td> 
   <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:54:56</td>   <td>47021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:18</td>   <td>43738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:54:57</td>   <td>47775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:18</td>   <td>44494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:55:13</td>   <td>63647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">contactus</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:36</td>   <td>62238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">contactus</td> 
   <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:55:14</td>   <td>64765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:37</td>   <td>63225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:55:15</td>   <td>65765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:38</td>   <td>63996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:55:31</td>   <td>82036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">contactus</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:56</td>   <td>81618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">contactus</td> 
   <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:55:33</td>   <td>83182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:57</td>   <td>82683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:55:33</td>   <td>83963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AboutUsTest.setup()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&gt;&gt;setup</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:08:58</td>   <td>83840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:55:51</td>   <td>101595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutUsTest.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">contactus</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:09:15</td>   <td>101587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">contactus</td> 
   <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/15 19:55:52</td>   <td>102758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AboutUsTest.teardown()[pri:0, instance:technoTutorsQaTests.AboutUsTest@307f6b8c]">&lt;&lt;teardown</td> 
+<tr bgcolor="78a366">  <td>20/03/16 15:09:17</td>   <td>102695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
 </table>
